# setup.cfg
# 
# Build and Installation Instructions:
#
# Windows (MinGW-w64):
#   1. Build: python setup.py build_ext --inplace --compiler=mingw32
#   2. Install: pip install -e . --no-build-isolation
#
# Windows (MSVC) / Linux / MacOS:
#   1. Build: python setup.py build_ext --inplace
#   2. Install: pip install -e . --no-build-isolation
#
# Note: The --compiler flag only works with build or build_ext commands, not install
#       For one-step: python setup.py build_ext --compiler=mingw32 install
#
# MinGW Compatibility:
#   setup.py automatically fixes Cython-generated C code for MinGW compatibility.
#   The fix addresses an enum initialization issue that causes compilation errors
#   with strict C compilers like MinGW GCC.

[metadata]
license_files = LICENSE

[bdist_wheel]
universal = 0
